--- a/calc.css
+++ b/calc.css
@@ -4,7 +4,7 @@
             font-family: 'Fjalla One', sans-serif;
         }
         body{
-            background-color: #45526c;
+            background-color: #58aa97;
         }
         button{
             padding: 10%;
